@@ -100,7 +100,7 @@ Conditionals=JSONDOC_P2
 DebugSourceDirs=
 UsePackages=0
 [Parameters]
-RunParams=D:\Data\2019\feeder\eater\xmls\0277.json
+RunParams=D:\Data\2023\jsonDoc\test\utf8noBOM.json
 HostApplication=
 Launcher=
 UseLauncher=0
@@ -111,7 +111,7 @@ AutoIncBuild=0
 MajorVer=1
 MinorVer=2
 Release=2
-Build=638
+Build=654
 Debug=0
 PreRelease=0
 Special=0
@@ -122,7 +122,7 @@ CodePage=1252
 [Version Info Keys]
 CompanyName=
 FileDescription=jsonV
-FileVersion=1.2.2.638
+FileVersion=1.2.2.654
 InternalName=
 LegalCopyright=
 LegalTrademarks=
